--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,201 @@
   font-size: 22px;
   font-weight: 300;
 }
+
+/********* Content *********/
+.content > .title {
+  background-image: url("/public/images/heart.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 100px 30px;
+  font-size: 40px;
+  color: #444444;
+  text-align: center;
+}
+.content .title h1 {
+  padding-top: 70px;
+}
+.services {
+  padding: 0 40px;
+  padding-bottom: 50px;
+}
+.services ul {
+  display: flex;
+  justify-content: space-between;
+}
+.services ul li {
+  width: calc(100% / 7 - 10px);
+  text-align: center;
+  font-weight: 600;
+  color: #444444;
+  cursor: pointer;
+}
+.services ul li img {
+  max-width: 90%;
+}
+.service_content {
+  display: flex;
+  gap: 30px;
+  padding: 100px 0;
+  align-items: center;
+}
+.service_content_info .title {
+  font-size: 30px;
+  color: #444444;
+  margin-bottom: 22px;
+}
+.service_content_info .body {
+  text-align: justify;
+  font-size: 18px;
+  line-height: 2;
+}
+.service_content_info .button {
+  margin-top: 50px;
+}
+.main_button {
+  border-radius: 5px;
+  font-family: inherit;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  cursor: pointer;
+  position: relative;
+}
+.service_content_info button {
+  background-color: #0099cc;
+  padding: 17px 32px;
+  color: #ffffff;
+  overflow: hidden;
+}
+.service_content_info button:hover > span:first-child {
+  opacity: 0;
+  transform: translateY(-50%);
+}
+.service_content_info button:hover > span:last-child {
+  top: 29%;
+  opacity: 1;
+}
+.service_content_info button span {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-family: inherit;
+  gap: 10px;
+}
+.service_content_info button svg {
+  font-size: 22px;
+}
+.service_content_info button > span:first-child {
+  transition: all 0.3s ease;
+}
+.service_content_info button > span:last-child {
+  position: absolute;
+  top: 100%;
+  transition: all 0.3s ease;
+  opacity: 0;
+}
+.announce button::before,
+.service_content_info button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -125%;
+  z-index: 2;
+  display: block;
+  width: 50%;
+  height: 100%;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  border-radius: 0;
+  transform: skewX(-25deg);
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  transition: all 0.9s ease;
+}
+.announce button:hover:before,
+.service_content_info button:hover:before {
+  left: 125%;
+}
+
+/******** announce *********/
+.announce .container {
+  background-color: #0099cc;
+  padding: 60px;
+  color: #fff;
+  position: relative;
+  width: 91%;
+  border-radius: 5px 0 0 5px;
+}
+.announce h1 {
+  font-size: 42px;
+  padding: 20px 0;
+}
+.announce h3 {
+  color: #ccc;
+  font-size: 20px;
+  font-weight: 400;
+}
+.announce .container > div {
+  top: 41%;
+  position: absolute;
+  left: -8%;
+}
+.announce .container .main_button {
+  padding: 20px 60px;
+  font-weight: bold;
+  color: #444444;
+  font-size: 20px;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.3s ease;
+  box-shadow: 0px 10px 30px 0px rgba(235, 189, 19, 0.31);
+}
+.announce .container .main_button:hover {
+  color: #ffffff;
+  background-color: #ebbd13;
+}
+.announce .container .main_button > span:last-child {
+  position: absolute;
+  opacity: 0;
+  bottom: -42%;
+  left: 29.5%;
+  transition: all 0.3s ease;
+}
+.announce .container .main_button:hover > span:last-child {
+  bottom: 29%;
+  left: 29.5%;
+  opacity: 1;
+}
+.announce .container button:hover > span {
+  display: inline-block;
+  opacity: 1;
+}
+.announce .container button > span:first-child {
+  transition: all 0.3s ease;
+}
+.announce .container button:hover > span:first-child {
+  opacity: 0;
+  transform: translateY(-50%);
+}
+.announce button::before {
+  transition: all 0.5s ease;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  ) !important;
+}
+
+/********* slider *********/
+.slider {
+  margin: 70px 40px !important;
+}
+
+/* *********************** */
+.test {
+  height: 1000px;
+}
