--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,3 @@
-header {
-  position: absolute;
-  top: 7%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
 .wide_header {
   width: 100%;
   border-radius: 5px;
@@ -63,6 +56,7 @@ header {
   right: 0;
   width: 100%;
   box-shadow: 0px 15px 60px 0px #0099cc26;
+  transition: all 0.7s ease-in;
 }
 .menu {
   display: flex;
@@ -71,6 +65,19 @@ header {
   padding: 0 30px;
   border-radius: 5px;
   background-color: #0099cc;
+  transition: all 0.2s ease-in;
+}
+.menu_header.fixed .menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-radius: 0;
+}
+.menu_header nav {
+  transition: all 0.7s ease-in-out;
+}
+.menu_header.fixed nav {
+  padding-bottom: 5px;
 }
 .menu_header .main_menu {
   display: flex;
@@ -201,12 +208,26 @@ header {
   justify-content: space-between;
   gap: 10px;
   color: #fff;
+  position: relative;
+}
+.social_menu span {
+  position: absolute;
+  background-color: #ebbd13;
+  color: #fff;
+  border-radius: 5px;
+  font-weight: 700;
+  padding: 4px 12px;
+  font-size: 12px;
+  top: -35px;
+  right: -8px;
+  transform: scale(0);
+  transition: all 0.3s ease;
 }
 .social_menu a {
   width: 2.2em;
   height: 2.2em;
   border-radius: 5px;
-  transition: all 0.3s ease;
+  transition: all 0.2s ease;
 }
 .social_menu .aparat img {
   color: #fff;
@@ -215,6 +236,17 @@ header {
 }
 .social_menu .aparat a:hover {
   background-color: #ed0b58;
+}
+.social_menu .linkedin span {
+  right: 29px;
+}
+.social_menu .insta span {
+  right: 72px;
+}
+.social_menu .linkedin a:hover + span,
+.social_menu .insta a:hover + span,
+.social_menu .aparat a:hover + span {
+  transform: scale(1);
 }
 .social_menu .linkedin a:hover {
   background-color: #007bb6;
