--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -164,3 +164,21 @@ footer {
   height: 1px;
   background-color: rgba(255, 255, 255, 0.36);
 }
+
+/****************************************************/
+/* responsive */
+@media only screen and (max-width: 972px) {
+  .footer {
+    flex-wrap: wrap;
+  }
+  .about {
+    max-width: 90%;
+  }
+  .license {
+    width: 50%;
+  }
+  .contacts {
+    width: 50%;
+    padding-left: 20px;
+  }
+}
